--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Vue3-Zoompinch example</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="theme-color" content="#1A1A1A" />
   <script src="./index.ts" type="module"></script>
 </head>
 <body>
